simplify android setup